test serialized object size with fst