@@ -36,4 +36,12 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.math=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.net=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.text=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.sql/java.sql=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
 }
